<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bkg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.feedbackapp.LoginActivity" >
<!-- #E7E2E1 -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/login_topic"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="96dp"
        android:text="@string/login_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/codeText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="34dp"
        android:hint="@string/login_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/codeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/login_btn" />

</RelativeLayout>
